src/out/asm8086Parser.js
/* eslint-disable */
// Generated from /home/julian/VACA-Project/grammar/asm8086.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var asm8086Listener = require('./asm8086Listener').asm8086Listener;
var asm8086Visitor = require('./asm8086Visitor').asm8086Visitor;

var grammarFileName = "asm8086.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'!'", "':'", "'.'", "'('", "')'", "'eq'", "'ne'", 
                     "','", "'*'", "'/'", "'mod'", "'and'", "'['", "']'", 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, "'$'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "BYTE", "WORD", 
                      "DWORD", "DSEG", "CSEG", "INCLUDE", "TITLE", "END", 
                      "ORG", "ENDIF", "IF", "EQU", "DW", "DB", "DD", "PTR", 
                      "NOT", "OFFSET", "RW", "RB", "RS", "LENGTH", "COMMENT", 
                      "REGISTER", "OPCODE", "REP", "DOLLAR", "SIGN", "NAME", 
                      "NUMBER", "STRING", "EOL", "WS" ];

var ruleNames =  [ "prog", "line", "instruction", "lbl", "assemblerdirective", 
                   "rw", "rb", "rs", "cseg", "dseg", "dw", "db", "dd", "equ", 
                   "if_", "assemblerexpression", "assemblerlogical", "assemblerterm", 
                   "endif", "end", "org", "title", "include", "expressionlist", 
                   "label", "expression", "multiplyingExpression", "argument", 
                   "ptr", "dollar", "register_", "string", "name", "number", 
                   "opcode", "rep", "comment" ];

function asm8086Parser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

asm8086Parser.prototype = Object.create(antlr4.Parser.prototype);
asm8086Parser.prototype.constructor = asm8086Parser;

Object.defineProperty(asm8086Parser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

asm8086Parser.EOF = antlr4.Token.EOF;
asm8086Parser.T__0 = 1;
asm8086Parser.T__1 = 2;
asm8086Parser.T__2 = 3;
asm8086Parser.T__3 = 4;
asm8086Parser.T__4 = 5;
asm8086Parser.T__5 = 6;
asm8086Parser.T__6 = 7;
asm8086Parser.T__7 = 8;
asm8086Parser.T__8 = 9;
asm8086Parser.T__9 = 10;
asm8086Parser.T__10 = 11;
asm8086Parser.T__11 = 12;
asm8086Parser.T__12 = 13;
asm8086Parser.T__13 = 14;
asm8086Parser.BYTE = 15;
asm8086Parser.WORD = 16;
asm8086Parser.DWORD = 17;
asm8086Parser.DSEG = 18;
asm8086Parser.CSEG = 19;
asm8086Parser.INCLUDE = 20;
asm8086Parser.TITLE = 21;
asm8086Parser.END = 22;
asm8086Parser.ORG = 23;
asm8086Parser.ENDIF = 24;
asm8086Parser.IF = 25;
asm8086Parser.EQU = 26;
asm8086Parser.DW = 27;
asm8086Parser.DB = 28;
asm8086Parser.DD = 29;
asm8086Parser.PTR = 30;
asm8086Parser.NOT = 31;
asm8086Parser.OFFSET = 32;
asm8086Parser.RW = 33;
asm8086Parser.RB = 34;
asm8086Parser.RS = 35;
asm8086Parser.LENGTH = 36;
asm8086Parser.COMMENT = 37;
asm8086Parser.REGISTER = 38;
asm8086Parser.OPCODE = 39;
asm8086Parser.REP = 40;
asm8086Parser.DOLLAR = 41;
asm8086Parser.SIGN = 42;
asm8086Parser.NAME = 43;
asm8086Parser.NUMBER = 44;
asm8086Parser.STRING = 45;
asm8086Parser.EOL = 46;
asm8086Parser.WS = 47;

asm8086Parser.RULE_prog = 0;
asm8086Parser.RULE_line = 1;
asm8086Parser.RULE_instruction = 2;
asm8086Parser.RULE_lbl = 3;
asm8086Parser.RULE_assemblerdirective = 4;
asm8086Parser.RULE_rw = 5;
asm8086Parser.RULE_rb = 6;
asm8086Parser.RULE_rs = 7;
asm8086Parser.RULE_cseg = 8;
asm8086Parser.RULE_dseg = 9;
asm8086Parser.RULE_dw = 10;
asm8086Parser.RULE_db = 11;
asm8086Parser.RULE_dd = 12;
asm8086Parser.RULE_equ = 13;
asm8086Parser.RULE_if_ = 14;
asm8086Parser.RULE_assemblerexpression = 15;
asm8086Parser.RULE_assemblerlogical = 16;
asm8086Parser.RULE_assemblerterm = 17;
asm8086Parser.RULE_endif = 18;
asm8086Parser.RULE_end = 19;
asm8086Parser.RULE_org = 20;
asm8086Parser.RULE_title = 21;
asm8086Parser.RULE_include = 22;
asm8086Parser.RULE_expressionlist = 23;
asm8086Parser.RULE_label = 24;
asm8086Parser.RULE_expression = 25;
asm8086Parser.RULE_multiplyingExpression = 26;
asm8086Parser.RULE_argument = 27;
asm8086Parser.RULE_ptr = 28;
asm8086Parser.RULE_dollar = 29;
asm8086Parser.RULE_register_ = 30;
asm8086Parser.RULE_string = 31;
asm8086Parser.RULE_name = 32;
asm8086Parser.RULE_number = 33;
asm8086Parser.RULE_opcode = 34;
asm8086Parser.RULE_rep = 35;
asm8086Parser.RULE_comment = 36;


function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8086Parser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.line = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LineContext);
    } else {
        return this.getTypedRuleContext(LineContext,i);
    }
};

ProgContext.prototype.EOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(asm8086Parser.EOL);
    } else {
        return this.getToken(asm8086Parser.EOL, i);
    }
};


ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.exitProg(this);
	}
};

ProgContext.prototype.accept = function(visitor) {
    if ( visitor instanceof asm8086Visitor ) {
        return visitor.visitProg(this);
    } else {
        return visitor.visitChildren(this);
    }
};




asm8086Parser.ProgContext = ProgContext;

asm8086Parser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, asm8086Parser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << asm8086Parser.T__0) | (1 << asm8086Parser.T__2) | (1 << asm8086Parser.DSEG) | (1 << asm8086Parser.CSEG) | (1 << asm8086Parser.INCLUDE) | (1 << asm8086Parser.TITLE) | (1 << asm8086Parser.END) | (1 << asm8086Parser.ORG) | (1 << asm8086Parser.ENDIF) | (1 << asm8086Parser.IF) | (1 << asm8086Parser.DW) | (1 << asm8086Parser.DB) | (1 << asm8086Parser.DD))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (asm8086Parser.RW - 33)) | (1 << (asm8086Parser.RB - 33)) | (1 << (asm8086Parser.RS - 33)) | (1 << (asm8086Parser.COMMENT - 33)) | (1 << (asm8086Parser.OPCODE - 33)) | (1 << (asm8086Parser.REP - 33)) | (1 << (asm8086Parser.NAME - 33)) | (1 << (asm8086Parser.EOL - 33)))) !== 0)) {
            this.state = 74;
            this.line();
            this.state = 79;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===asm8086Parser.T__0) {
                this.state = 75;
                this.match(asm8086Parser.T__0);
                this.state = 76;
                this.line();
                this.state = 81;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 82;
            this.match(asm8086Parser.EOL);
            this.state = 88;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function LineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8086Parser.RULE_line;
    return this;
}

LineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LineContext.prototype.constructor = LineContext;

LineContext.prototype.lbl = function() {
    return this.getTypedRuleContext(LblContext,0);
};

LineContext.prototype.assemblerdirective = function() {
    return this.getTypedRuleContext(AssemblerdirectiveContext,0);
};

LineContext.prototype.instruction = function() {
    return this.getTypedRuleContext(InstructionContext,0);
};

LineContext.prototype.comment = function() {
    return this.getTypedRuleContext(CommentContext,0);
};

LineContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.enterLine(this);
	}
};

LineContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.exitLine(this);
	}
};

LineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof asm8086Visitor ) {
        return visitor.visitLine(this);
    } else {
        return visitor.visitChildren(this);
    }
};




asm8086Parser.LineContext = LineContext;

asm8086Parser.prototype.line = function() {

    var localctx = new LineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, asm8086Parser.RULE_line);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 89;
            this.lbl();

        }
        this.state = 94;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
        case asm8086Parser.T__2:
        case asm8086Parser.DSEG:
        case asm8086Parser.CSEG:
        case asm8086Parser.INCLUDE:
        case asm8086Parser.TITLE:
        case asm8086Parser.END:
        case asm8086Parser.ORG:
        case asm8086Parser.ENDIF:
        case asm8086Parser.IF:
        case asm8086Parser.DW:
        case asm8086Parser.DB:
        case asm8086Parser.DD:
        case asm8086Parser.RW:
        case asm8086Parser.RB:
        case asm8086Parser.RS:
        case asm8086Parser.NAME:
        	this.state = 92;
        	this.assemblerdirective();
        	break;
        case asm8086Parser.OPCODE:
        case asm8086Parser.REP:
        	this.state = 93;
        	this.instruction();
        	break;
        case asm8086Parser.T__0:
        case asm8086Parser.COMMENT:
        case asm8086Parser.EOL:
        	break;
        default:
        	break;
        }
        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===asm8086Parser.COMMENT) {
            this.state = 96;
            this.comment();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8086Parser.RULE_instruction;
    return this;
}

InstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionContext.prototype.constructor = InstructionContext;

InstructionContext.prototype.opcode = function() {
    return this.getTypedRuleContext(OpcodeContext,0);
};

InstructionContext.prototype.rep = function() {
    return this.getTypedRuleContext(RepContext,0);
};

InstructionContext.prototype.expressionlist = function() {
    return this.getTypedRuleContext(ExpressionlistContext,0);
};

InstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.enterInstruction(this);
	}
};

InstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.exitInstruction(this);
	}
};

InstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof asm8086Visitor ) {
        return visitor.visitInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




asm8086Parser.InstructionContext = InstructionContext;

asm8086Parser.prototype.instruction = function() {

    var localctx = new InstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, asm8086Parser.RULE_instruction);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 100;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===asm8086Parser.REP) {
            this.state = 99;
            this.rep();
        }

        this.state = 102;
        this.opcode();
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << asm8086Parser.T__3) | (1 << asm8086Parser.T__12) | (1 << asm8086Parser.BYTE) | (1 << asm8086Parser.WORD) | (1 << asm8086Parser.DWORD) | (1 << asm8086Parser.PTR) | (1 << asm8086Parser.NOT))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (asm8086Parser.OFFSET - 32)) | (1 << (asm8086Parser.LENGTH - 32)) | (1 << (asm8086Parser.REGISTER - 32)) | (1 << (asm8086Parser.DOLLAR - 32)) | (1 << (asm8086Parser.SIGN - 32)) | (1 << (asm8086Parser.NAME - 32)) | (1 << (asm8086Parser.NUMBER - 32)) | (1 << (asm8086Parser.STRING - 32)))) !== 0)) {
            this.state = 103;
            this.expressionlist();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function LblContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8086Parser.RULE_lbl;
    return this;
}

LblContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LblContext.prototype.constructor = LblContext;

LblContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

LblContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.enterLbl(this);
	}
};

LblContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.exitLbl(this);
	}
};

LblContext.prototype.accept = function(visitor) {
    if ( visitor instanceof asm8086Visitor ) {
        return visitor.visitLbl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




asm8086Parser.LblContext = LblContext;

asm8086Parser.prototype.lbl = function() {

    var localctx = new LblContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, asm8086Parser.RULE_lbl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        this.label();
        this.state = 108;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===asm8086Parser.T__1) {
            this.state = 107;
            this.match(asm8086Parser.T__1);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AssemblerdirectiveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8086Parser.RULE_assemblerdirective;
    return this;
}

AssemblerdirectiveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssemblerdirectiveContext.prototype.constructor = AssemblerdirectiveContext;

AssemblerdirectiveContext.prototype.org = function() {
    return this.getTypedRuleContext(OrgContext,0);
};

AssemblerdirectiveContext.prototype.end = function() {
    return this.getTypedRuleContext(EndContext,0);
};

AssemblerdirectiveContext.prototype.if_ = function() {
    return this.getTypedRuleContext(If_Context,0);
};

AssemblerdirectiveContext.prototype.endif = function() {
    return this.getTypedRuleContext(EndifContext,0);
};

AssemblerdirectiveContext.prototype.equ = function() {
    return this.getTypedRuleContext(EquContext,0);
};

AssemblerdirectiveContext.prototype.db = function() {
    return this.getTypedRuleContext(DbContext,0);
};

AssemblerdirectiveContext.prototype.dw = function() {
    return this.getTypedRuleContext(DwContext,0);
};

AssemblerdirectiveContext.prototype.cseg = function() {
    return this.getTypedRuleContext(CsegContext,0);
};

AssemblerdirectiveContext.prototype.dd = function() {
    return this.getTypedRuleContext(DdContext,0);
};

AssemblerdirectiveContext.prototype.dseg = function() {
    return this.getTypedRuleContext(DsegContext,0);
};

AssemblerdirectiveContext.prototype.title = function() {
    return this.getTypedRuleContext(TitleContext,0);
};

AssemblerdirectiveContext.prototype.include = function() {
    return this.getTypedRuleContext(IncludeContext,0);
};

AssemblerdirectiveContext.prototype.rw = function() {
    return this.getTypedRuleContext(RwContext,0);
};

AssemblerdirectiveContext.prototype.rb = function() {
    return this.getTypedRuleContext(RbContext,0);
};

AssemblerdirectiveContext.prototype.rs = function() {
    return this.getTypedRuleContext(RsContext,0);
};

AssemblerdirectiveContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.enterAssemblerdirective(this);
	}
};

AssemblerdirectiveContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.exitAssemblerdirective(this);
	}
};

AssemblerdirectiveContext.prototype.accept = function(visitor) {
    if ( visitor instanceof asm8086Visitor ) {
        return visitor.visitAssemblerdirective(this);
    } else {
        return visitor.visitChildren(this);
    }
};




asm8086Parser.AssemblerdirectiveContext = AssemblerdirectiveContext;

asm8086Parser.prototype.assemblerdirective = function() {

    var localctx = new AssemblerdirectiveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, asm8086Parser.RULE_assemblerdirective);
    try {
        this.state = 126;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 110;
            this.org();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 111;
            this.end();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 112;
            this.if_();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 113;
            this.endif();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 114;
            this.equ();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 115;
            this.db();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 116;
            this.dw();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 117;
            this.cseg();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 118;
            this.dd();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 119;
            this.dseg();
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 120;
            this.title();
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 121;
            this.include();
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 122;
            this.rw();
            break;

        case 14:
            this.enterOuterAlt(localctx, 14);
            this.state = 123;
            this.rb();
            break;

        case 15:
            this.enterOuterAlt(localctx, 15);
            this.state = 124;
            this.rs();
            break;

        case 16:
            this.enterOuterAlt(localctx, 16);
            this.state = 125;
            this.match(asm8086Parser.T__2);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function RwContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8086Parser.RULE_rw;
    return this;
}

RwContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RwContext.prototype.constructor = RwContext;

RwContext.prototype.RW = function() {
    return this.getToken(asm8086Parser.RW, 0);
};

RwContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

RwContext.prototype.name = function() {
    return this.getTypedRuleContext(NameContext,0);
};

RwContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.enterRw(this);
	}
};

RwContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.exitRw(this);
	}
};

RwContext.prototype.accept = function(visitor) {
    if ( visitor instanceof asm8086Visitor ) {
        return visitor.visitRw(this);
    } else {
        return visitor.visitChildren(this);
    }
};




asm8086Parser.RwContext = RwContext;

asm8086Parser.prototype.rw = function() {

    var localctx = new RwContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, asm8086Parser.RULE_rw);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===asm8086Parser.NAME) {
            this.state = 128;
            this.name();
        }

        this.state = 131;
        this.match(asm8086Parser.RW);
        this.state = 132;
        this.expression();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function RbContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = asm8086Parser.RULE_rb;
    return this;
}

RbContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RbContext.prototype.constructor = RbContext;

RbContext.prototype.RB = function() {
    return this.getToken(asm8086Parser.RB, 0);
};

RbContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

RbContext.prototype.name = function() {
    return this.getTypedRuleContext(NameContext,0);
};

RbContext.prototype.enterRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.enterRb(this);
	}
};

RbContext.prototype.exitRule = function(listener) {
    if(listener instanceof asm8086Listener ) {
        listener.exitRb(this);
	}
};
